--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: OpenPythia
 email: your-email@domain.com
 description: OpenPythia allows a non-invasive look inside your Oracle database and find out what it is doing, looking at the used CPU, used IO and the statements performed.
 baseurl: "/"
-url: "http://openPythia.com"
+url: "http://openPythia.org"
 github_username:  openPythia
 
 oracleDriver: http://www.oracle.com/technetwork/database/enterprise-edition/jdbc-112010-090769.html
